@@ -18,16 +18,12 @@ width="210" height="62" border="0" align="right" alt=
 <tbody>
 <tr>
 <td style="width: 20%;" valign="top">
-<iframe src="table.html" type="text/html" width="20%" height="800" frameborder=0>
+<iframe src="table.html" type="text/html" width="100%" height="800" frameborder=0>
 <p>The TOC should be here..</p>
 </iframe>
 </td>
-</tr>
-</tbody>
-</table>
-</td>
 <td valign="top">
-<div align="justify"><!-- HERE!! --></div>
+<div align="justify">test<!-- HERE!! --></div>
 </td>
 </tr>
 </tbody>
