@@ -27,10 +27,6 @@ bgcolor="#EDEDED" style="width: 100%;">
 <p>The TOC should be here..</p>
 </iframe>
 </td>
-</tr>
-</tbody>
-</table>
-</td>
 <td valign="top">
 <div align="justify"><!-- HERE!! -->
 <h2><a name="Goals"></a>Goals</h2>
