@@ -22,10 +22,6 @@ width="210" height="62" border="0" align="right" alt=
 <p>The TOC should be here..</p>
 </iframe>
 </td>
-</tr>
-</tbody>
-</table>
-</td>
 <td valign="top">
 <div align="justify">
 <h2><a name="How_you_can_help"></a>How you can help</h2>
