@@ -18,10 +18,6 @@ width="210" height="62" border="0" align="right" alt=
 <p>The TOC should be here..</p>
 </iframe>
 </td>
-</tr>
-</tbody>
-</table>
-</td>
 <td valign="top">
 <div align="justify">
 <h1><a name="Welcome_to_the_JAIL_home_page."></a>Welcome to
